# otell

./: Cargo.toml  MODEL_QUICKSTART.md  README.md  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-pr.yml  release.yml
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: config.rs  error.rs  filter.rs  ids.rs  lib.rs  query.rs  time.rs
crates/core/src/model/: log.rs  metric.rs  mod.rs  span.rs
crates/ingest/: CHANGELOG.md  Cargo.toml
crates/ingest/src/: forward.rs  lib.rs  pipeline.rs  server.rs
crates/ingest/src/otlp/: decode.rs  grpc.rs  http.rs  mod.rs
crates/otell/: CHANGELOG.md  Cargo.toml
crates/otell/src/: client.rs  main.rs  output.rs  protocol.rs  query_server.rs  telemetry.rs
crates/otell/tests/: e2e_cli.rs  stress.rs
crates/store/: CHANGELOG.md  Cargo.toml
crates/store/src/: db.rs  lib.rs  query.rs  retention.rs  schema.rs  write.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIG.md  DEVELOPMENT.md  GETTING_STARTED.md
website/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: page.tsx
website/app/docs/[slug]/: page.tsx
website/components/: analytics-bootstrap.tsx  site-header.tsx
website/lib/: analytics.ts  docs.ts
website/public/: install.ps1  install.sh
