[workspace]
members = [
  "crates/otell",
  "crates/core",
  "crates/store",
  "crates/ingest",
  "crates/testkit",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["otell contributors"]
repository = "https://github.com/runmat-org/otell"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.2", features = ["bundled", "chrono"] }
futures = "0.3"
flate2 = "1.1"
glob = "0.3"
humantime = "2.1"
opentelemetry-proto = { version = "0.30", features = ["gen-tonic", "metrics", "trace", "logs"] }
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
prost = "0.13"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "io-util", "io-std", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.13", features = ["transport", "gzip"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
owo-colors = "4.1"
async-stream = "0.3"

[profile.dev]
debug = 0
incremental = false
