[package]
name = "otell-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core shared models and query schemas for otell"

[dependencies]
chrono.workspace = true
glob.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
