[package]
name = "otell-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OTLP ingest servers and decode pipeline for otell"

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
flate2.workspace = true
futures.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
otell-core = { version = "0.3.0", path = "../core" }
otell-store = { version = "0.3.0", path = "../store" }

[dev-dependencies]
anyhow.workspace = true
