[package]
name = "otell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
clap.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
otell-core = { path = "../core" }
otell-ingest = { path = "../ingest" }
otell-store = { path = "../store" }

[dev-dependencies]
anyhow.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3.13"
tonic.workspace = true
serial_test = "3.1"
testkit = { path = "../testkit" }
