[package]
name = "otell-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DuckDB storage layer for otell telemetry"

[dependencies]
chrono.workspace = true
duckdb.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
otell-core = { version = "0.3.1", path = "../core" }

[dev-dependencies]
anyhow.workspace = true
