[package]
name = "testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
serde_json.workspace = true
tokio.workspace = true
otell-core = { version = "0.3.0", path = "../core" }
